# crypto_trading_patform

./: 20200317.csv  CMakeLists.txt  CSV_reader.cpp  CSV_reader.h  Merkel_main.cpp  Merkel_main.h  OrderBookEntry.cpp  OrderBookEntry.h  Order_book_entry.cpp  Order_book_entry.h  Orderbook.cpp  Orderbook.h  Orderbook_entry.cpp  Orderbook_entry.h  Wallet.cpp  Wallet.h  crypto_trading_patform.cpp  crypto_trading_patform.sln  crypto_trading_patform.vcxproj  crypto_trading_patform.vcxproj.filters  main.cpp  menu.cpp  menu.h  order_book_functions.cpp  order_book_functions.h  tokenise.cpp
